// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Job /> should render properly for Errors 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/jobs",
          "title": "Job Queue",
        },
        Object {
          "href": false,
          "title": "Job Details",
        },
      ]
    }
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-3 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-4 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  color: #212121;
  background-color: #ebb52e;
  font-weight: 500;
  border-radius: 32px;
  white-space: nowrap;
  font-size: 17px;
  line-height: 20px;
  padding: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

.emotion-10 {
  height: 16px;
}

.emotion-11 {
  width: 100%;
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-14 {
  position: relative;
  height: 100%;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  background-color: #b3b3b3;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-17 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 4px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-24 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-24:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-24:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
    <div
      className="emotion-0"
    >
      <div>
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            Job
             Name:
          </div>
          <h3
            className="emotion-3"
          >
            image_similarity.json
          </h3>
        </div>
        <ul
          className="emotion-4"
        >
          <li
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              ID
              :
            </div>
            <div
              className="emotion-5"
            >
              82d5308b-67c2-1433-8fef-0a580a000956
            </div>
          </li>
        </ul>
      </div>
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          Job
           
          Paused
        </div>
      </div>
    </div>
    <div
      className="emotion-10"
    />
    <hr
      className="emotion-11"
    />
    <div
      className="emotion-12"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-14"
        >
          <button
            aria-label="Toggle Dropdown Menu"
            className="emotion-15"
            onBlur={[Function]}
            onClick={[Function]}
            type="button"
          >
            Modify Job
            <svg
              data-file-name="chevron.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          Priority
          :
        </div>
        <div>
          100
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          # Assets
          :
        </div>
        <div>
          4
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          Task Progress
          :
        </div>
        <div>
          <div
            aria-label="Progress Bar"
            className="emotion-22"
            onKeyPress={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="emotion-23"
            >
              <div
                className="emotion-24"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Tasks
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  <TaskErrors
    parentUrl="/api/v1/projects/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/"
  />,
]
`;

exports[`<Job /> should render properly for Tasks 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/jobs",
          "title": "Job Queue",
        },
        Object {
          "href": false,
          "title": "Job Details",
        },
      ]
    }
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-6 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-7 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  color: #212121;
  background-color: #009f22;
  font-weight: 500;
  border-radius: 32px;
  white-space: nowrap;
  font-size: 17px;
  line-height: 20px;
  padding: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

.emotion-13 {
  height: 16px;
}

.emotion-14 {
  width: 100%;
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-17 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 4px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-24 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-24:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-24:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
    <div
      className="emotion-0"
    >
      <div
        className="emotion-1"
      >
        <svg
          color="#0074f5"
          data-file-name="information.svg"
          height={20}
        />
        <div
          className="emotion-2"
          role="alert"
        >
          Retry All Failures
        </div>
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <div>
        <div
          className="emotion-4"
        >
          <div
            className="emotion-5"
          >
            Job
             Name:
          </div>
          <h3
            className="emotion-6"
          >
            image_similarity.json
          </h3>
        </div>
        <ul
          className="emotion-7"
        >
          <li
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              ID
              :
            </div>
            <div
              className="emotion-8"
            >
              82d5308b-67c2-1433-8fef-0a580a000956
            </div>
          </li>
        </ul>
      </div>
      <div
        className="emotion-11"
      >
        <div
          className="emotion-12"
        >
          Job
           
          Success
        </div>
      </div>
    </div>
    <div
      className="emotion-13"
    />
    <hr
      className="emotion-14"
    />
    <div
      className="emotion-15"
    >
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          Priority
          :
        </div>
        <div>
          100
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          # Assets
          :
        </div>
        <div>
          4
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-17"
        >
          Task Progress
          :
        </div>
        <div>
          <div
            aria-label="Progress Bar"
            className="emotion-22"
            onKeyPress={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="emotion-23"
            >
              <div
                className="emotion-24"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Tasks
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  <JobTasks />,
]
`;
